--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,8 +23,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint black
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Format with black
+      run:
+        black *.py
     - name: Lint with pylint
       run: |
         pylint *.py
